--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/babel-plugin": "^1.101.7",
+    "@tamagui/config": "^1.101.7",
+    "@tamagui/core": "^1.101.7",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -33,7 +36,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tamagui": "^1.101.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
